fix: landscape message on mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -36,40 +36,26 @@ body {
   width: 10vmin;
   margin: 6vmin;
   cursor: pointer;
+  animation: pulse ease 1.5s infinite alternate;
 }
 
-#logo:hover:not(:active) {
-  animation: shake ease 0.05s infinite alternate;
-}
-
-@keyframes shake {
+@keyframes pulse {
   0% {
-    transform: translate(0px, 0px);
-  }
-
-  20% {
-    transform: translate(10px, 10px);
-  }
-
-  40% {
-    transform: translate(0px, 0px);
-  }
-
-  60% {
-    transform: translate(10px, -10px);
-  }
-
-  80% {
-    transform: translate(0px, 0px);
+    transform: scale(1);
   }
 
   100% {
-    transform: translate(-10px, -10px);
+    transform: scale(1.2);
   }
+}
+
+#logo:hover:not(:active) {
+  animation: pulse ease 0.2s infinite alternate;
 }
 
 #logo:active {
   transform: scale(0.6);
+  animation: none;
 }
 
 @keyframes explode {
@@ -104,7 +90,7 @@ body {
 #singularity {
   z-index: 99999;
   position: absolute;
-  left: 50vw;
+  left: 48vw;
   border-radius: 50%;
   width: 4vw;
   height: 4vh;
@@ -392,7 +378,9 @@ h3 {
   color: #ffb700;
   font-size: 2.6rem;
   display: inline;
-  /* margin-top: 2rem; */
+  margin-bottom: 1rem;
+  margin-top: 2rem;
+  padding-left: 1rem;
 }
 
 button {
@@ -538,6 +526,7 @@ p {
     width: 80vw;
     text-align: center;
     margin: 5px 0px;
+    padding-left: 0rem;
   }
   .furtherinfopic {
     width: 50vw;
@@ -586,8 +575,8 @@ p {
     font-size: 3.5rem;
   }
   #logo {
-    width: 15vw;
-    height: 15vw;
+    width: 15vmin;
+    height: 15vmin;
   }
   #cta {
     font-size: 1.5rem;
@@ -708,10 +697,10 @@ p {
   }
 
   .further-info {
-    width: 80vw;
-    height: 80vh;
-    left: 10vw;
-    bottom: -95%;
+    width: 70vw;
+    height: 70vh;
+    left: 15vw;
+    bottom: -80%;
   }
   #main-info-text,
   .link-text {
